add a constant half and hour gap after landing

--- a/tools/generate_data/generate_flights_and_schedule.ipynb
+++ b/tools/generate_data/generate_flights_and_schedule.ipynb
@@ -220,7 +220,7 @@
     "        \n",
     "        print(sql.format(route_id, aircraft_id, departure_time, est_duration))\n",
     "        \n",
-    "        use_aircraft(aircraft_id, departure_time + timedelta(hours=est_duration), end_airport)\n",
+    "        use_aircraft(aircraft_id, departure_time + timedelta(hours=est_duration + 0.5), end_airport)\n",
     "    \n",
     "    starting_date += timedelta(days=1)"
    ]
