fix script to allow abort

--- a/tools/generate_data/generate_flight_tickets.ipynb
+++ b/tools/generate_data/generate_flight_tickets.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T02:04:44.220993Z",
+     "start_time": "2024-04-20T02:04:43.686439Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from os import getenv\n",
@@ -24,8 +29,8 @@
    "id": "30d2143cf9e7b576",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:20.735181Z",
-     "start_time": "2024-04-19T10:20:20.731473Z"
+     "end_time": "2024-04-20T02:07:13.028942Z",
+     "start_time": "2024-04-20T02:07:13.025009Z"
     }
    },
    "outputs": [],
@@ -39,8 +44,8 @@
    "id": "1f1bee6edd5905b2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:21.405493Z",
-     "start_time": "2024-04-19T10:20:21.324175Z"
+     "end_time": "2024-04-20T02:07:13.473191Z",
+     "start_time": "2024-04-20T02:07:13.380826Z"
     }
    },
    "outputs": [],
@@ -60,8 +65,8 @@
    "id": "a641861891568c49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:21.829941Z",
-     "start_time": "2024-04-19T10:20:21.726972Z"
+     "end_time": "2024-04-20T02:07:13.956616Z",
+     "start_time": "2024-04-20T02:07:13.746102Z"
     }
    },
    "outputs": [],
@@ -79,8 +84,8 @@
    "id": "a5965d7325bd62e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:22.119646Z",
-     "start_time": "2024-04-19T10:20:22.114379Z"
+     "end_time": "2024-04-20T02:07:14.143510Z",
+     "start_time": "2024-04-20T02:07:14.138322Z"
     }
    },
    "outputs": [],
@@ -103,8 +108,8 @@
    "id": "8f06148b7bf86cd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:22.526658Z",
-     "start_time": "2024-04-19T10:20:22.521330Z"
+     "end_time": "2024-04-20T02:07:14.484396Z",
+     "start_time": "2024-04-20T02:07:14.481123Z"
     }
    },
    "outputs": [],
@@ -122,8 +127,8 @@
    "id": "43885c481043ac84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:26.018848Z",
-     "start_time": "2024-04-19T10:20:22.927491Z"
+     "end_time": "2024-04-20T02:07:16.781919Z",
+     "start_time": "2024-04-20T02:07:14.873619Z"
     }
    },
    "outputs": [],
@@ -143,8 +148,8 @@
    "id": "cdde5b02beb50b8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:26.559934Z",
-     "start_time": "2024-04-19T10:20:26.021071Z"
+     "end_time": "2024-04-20T02:07:17.133740Z",
+     "start_time": "2024-04-20T02:07:16.784332Z"
     }
    },
    "outputs": [],
@@ -169,8 +174,8 @@
    "id": "48f299f35b8a534b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:26.568354Z",
-     "start_time": "2024-04-19T10:20:26.561476Z"
+     "end_time": "2024-04-20T02:07:17.138778Z",
+     "start_time": "2024-04-20T02:07:17.134759Z"
     }
    },
    "outputs": [],
@@ -196,8 +201,8 @@
    "id": "11ef85cb48cdf793",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:28.305340Z",
-     "start_time": "2024-04-19T10:20:26.573049Z"
+     "end_time": "2024-04-20T02:07:17.724739Z",
+     "start_time": "2024-04-20T02:07:17.140645Z"
     }
    },
    "outputs": [],
@@ -219,8 +224,8 @@
    "id": "a5ad74d6ade82876",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:28.314682Z",
-     "start_time": "2024-04-19T10:20:28.307253Z"
+     "end_time": "2024-04-20T02:07:17.734233Z",
+     "start_time": "2024-04-20T02:07:17.726953Z"
     }
    },
    "outputs": [],
@@ -239,8 +244,8 @@
    "id": "54c44a5fc3769931",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:28.329181Z",
-     "start_time": "2024-04-19T10:20:28.317674Z"
+     "end_time": "2024-04-20T02:07:17.746395Z",
+     "start_time": "2024-04-20T02:07:17.736981Z"
     }
    },
    "outputs": [],
@@ -272,7 +277,14 @@
     "        seats = seats[:n_tickets]\n",
     "        for seat in seats:\n",
     "            USED_SEAT[row[0]].add(seat)\n",
-    "        return row[0], row[1] + timedelta(hours=row[3] + 12), seats, list(seat_classes[seat] for seat in seats)"
+    "        return row[0], row[1] + timedelta(hours=row[3] + 12), seats, list(seat_classes[seat] for seat in seats)\n",
+    "    \n",
+    "def cancel_seat(flight_id: str, seat_ids: list[str]):\n",
+    "    for seat_id in seat_ids:\n",
+    "        try:\n",
+    "            USED_SEAT[flight_id].remove(seat_id)\n",
+    "        except KeyError:\n",
+    "            pass"
    ]
   },
   {
@@ -281,8 +293,8 @@
    "id": "121e96c9e9a56f9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:33.450507Z",
-     "start_time": "2024-04-19T10:20:30.750847Z"
+     "end_time": "2024-04-20T02:07:18.896536Z",
+     "start_time": "2024-04-20T02:07:17.749152Z"
     }
    },
    "outputs": [],
@@ -299,8 +311,8 @@
    "id": "f5560af18a3f4985",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:33.461696Z",
-     "start_time": "2024-04-19T10:20:33.454810Z"
+     "end_time": "2024-04-20T02:07:18.904022Z",
+     "start_time": "2024-04-20T02:07:18.898705Z"
     }
    },
    "outputs": [],
@@ -315,8 +327,8 @@
    "id": "6abc0df5f03c2314",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T10:20:33.517813Z",
-     "start_time": "2024-04-19T10:20:33.465086Z"
+     "end_time": "2024-04-20T02:07:18.915136Z",
+     "start_time": "2024-04-20T02:07:18.907627Z"
     }
    },
    "outputs": [],
@@ -343,11 +355,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "757a3403ad2ec138",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T02:50:19.527513Z",
+     "start_time": "2024-04-20T02:15:50.014089Z"
+    }
+   },
    "outputs": [],
    "source": [
     "flight_ticket_file = open(\"flight_ticket.sql\", \"w\")\n",
-    "flight_ticket_fmt = \"    INTO FLIGHT_TICKET (ACCOUNT_ID, PAYMENT_ID, CREATED_AT, BOARDING_GROUP, TICKET_PRICE, TICKET_STATUS) VALUES ({}, '{}', TO_TIMESTAMP('{:%Y-%m-%d %H:%M:%S}', 'YYYY-MM-DD HH24:MI:SS'), {}, {:.2f}, 'Completed')\\n\"\n",
+    "flight_ticket_fmt = \"    INTO FLIGHT_TICKET (FLIGHT_TICKET_ID, ACCOUNT_ID, PAYMENT_ID, CREATED_AT, BOARDING_GROUP, TICKET_PRICE, TICKET_STATUS) VALUES ('{}', {}, '{}', TO_TIMESTAMP('{:%Y-%m-%d %H:%M:%S}', 'YYYY-MM-DD HH24:MI:SS'), {}, {:.2f}, 'Completed')\\n\"\n",
     "flight_ticket_k = 0\n",
     "flight_sequence_file = open(\"flight_seq.sql\" , \"w\")\n",
     "flight_sequence_fmt = \"    INTO FLIGHT_SEQUENCE (FLIGHT_TICKET_ID, FLIGHT_ID, SEAT_ID, FLIGHT_SEQUENCE) VALUES ('{}', {}, '{}', {})\\n\"\n",
@@ -397,6 +414,10 @@
     "                    break\n",
     "    \n",
     "            if cancel or not temps:\n",
+    "                for temp in temps: \n",
+    "                    if temp:\n",
+    "                        flight_id, _, seat_ids, _ = temp\n",
+    "                        cancel_seat(flight_id, seat_ids)\n",
     "                continue\n",
     "    \n",
     "            for route_seq, (flight_id, wait_until, seat_ids, seat_classes) in enumerate(temps, start=1):\n",
@@ -421,8 +442,8 @@
     "    \n",
     "                    ticket_prices[i] += flight_price * seat_rate\n",
     "                    payment_amt += flight_price * seat_rate\n",
-    "            for ticket_price in ticket_prices:\n",
-    "                flight_ticket_file.write(flight_ticket_fmt.format(account_selected, payment_id, dt, random.randint(1, 10), ticket_price)) # TODO: fix boarding group\n",
+    "            for ticket_id, ticket_price in zip(ticket_ids, ticket_prices):\n",
+    "                flight_ticket_file.write(flight_ticket_fmt.format(ticket_id, account_selected, payment_id, dt, random.randint(1, 10), ticket_price)) # TODO: fix boarding group\n",
     "    \n",
     "                flight_ticket_k += 1\n",
     "                if flight_ticket_k >= 2000:\n",
@@ -436,10 +457,11 @@
     "                payment_file.write(\"SELECT 1 FROM DUAL;\\n\")\n",
     "                payment_file.write(\"INSERT ALL\\n\")\n",
     "                payment_k = 0\n",
-    "            dt += timedelta(minutes=random.randint(1, 360))\n",
+    "            dt += timedelta(minutes=random.randint(1, 10), seconds=random.randint(1, 60))\n",
+    "        dt += timedelta(minutes=random.randint(1, 360), seconds=random.randint(1, 60))\n",
     "except KeyboardInterrupt:\n",
     "    print(\"stopping\")\n",
-    "\n",
+    " \n",
     "for fp in (flight_ticket_file, flight_sequence_file, payment_file):\n",
     "    fp.write(\"SELECT 1 FROM DUAL;\\n\")\n",
     "\n",
@@ -452,7 +474,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "688fd04c5a71b2fc",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T03:12:51.289543Z",
+     "start_time": "2024-04-20T03:12:51.248066Z"
+    }
+   },
    "outputs": [],
    "source": [
     "con.close()"
