make print output auto formatted for sql

--- a/tools/generate_data/generate_membership.ipynb
+++ b/tools/generate_data/generate_membership.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-18T15:44:47.031400Z",
-     "start_time": "2024-04-18T15:44:46.582197Z"
+     "end_time": "2024-04-30T02:47:13.861239Z",
+     "start_time": "2024-04-30T02:47:13.647011Z"
     }
    },
-   "outputs": [],
    "source": [
     "from os import getenv\n",
     "from connect_db import connect_db\n",
@@ -21,19 +20,18 @@
     "    port=int(getenv(\"ORACLE_PORT\"))\n",
     ")\n",
     "cur = con.cursor()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61f638a30520e43c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T15:56:07.806726Z",
-     "start_time": "2024-04-18T15:56:07.799716Z"
+     "end_time": "2024-04-30T02:47:20.599757Z",
+     "start_time": "2024-04-30T02:47:20.412922Z"
     }
    },
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "\n",
@@ -47,36 +45,45 @@
     "\n",
     "def get_random_membership() -> str:\n",
     "    return np.random.choice(membership_types, size=1, p=weights).item()"
-   ]
+   ],
+   "id": "61f638a30520e43c",
+   "outputs": [],
+   "execution_count": 2
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74df8243a39b282",
    "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "stmt = \"SELECT ACCOUNT_ID FROM ACCOUNT\"\n",
+    "from utils import paginate_insert_all\n",
+    "\n",
     "sql = \"    INTO MEMBERSHIP (ACCOUNT_ID, MEMBERSHIP_TYPE_ID) VALUES ({}, '{}')\"\n",
+    "@paginate_insert_all\n",
+    "def insert_membership(account_id: str, membership_type):\n",
+    "    print(sql.format(account_id, membership_type))\n",
+    "    \n",
+    "\n",
+    "stmt = \"SELECT ACCOUNT_ID FROM ACCOUNT\"\n",
     "for row in cur.execute(stmt):\n",
     "    if is_membership():\n",
-    "        print(sql.format(row[0], get_random_membership()))"
-   ]
+    "        insert_membership(row[0], get_random_membership())\n",
+    "print(\"SELECT 1 FROM DUAL;\")"
+   ],
+   "id": "74df8243a39b282",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a12b6e67a757e12b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-18T16:12:05.831447Z",
      "start_time": "2024-04-18T16:12:05.747284Z"
     }
    },
+   "cell_type": "code",
+   "source": "con.close()",
+   "id": "a12b6e67a757e12b",
    "outputs": [],
-   "source": [
-    "con.close()"
-   ]
+   "execution_count": 17
   }
  ],
  "metadata": {
