always set wait_until to the current looping time if smaller.
Cant have time travelling customers now

--- a/tools/generate_data/generate_flight_tickets.ipynb
+++ b/tools/generate_data/generate_flight_tickets.ipynb
@@ -283,7 +283,7 @@
     "stmt = \"SELECT FLIGHT_ID, AIRCRAFT_ID FROM FLIGHT\"\n",
     "FLIGHT_AIRCRAFT: dict[str, str] = {row[0]: row[1] for row in cur.execute(stmt)}\n",
     "\n",
-    "def find_closest_flight(current_dt: datetime, route_id: str, n_tickets: int, dt: datetime) -> tuple[str, datetime, list[Seat]] | None:\n",
+    "def find_closest_flight(current_dt: datetime, route_id: str, n_tickets: int) -> tuple[str, datetime, list[Seat]] | None:\n",
     "    filter_flight_to_time = lambda dt: (t[0] for t in filter(lambda t: t[1] > dt, FLIGHT_DATETIME.items()))\n",
     "    filter_route_flights = lambda flight_ids, dt: filter(lambda id: id in flight_ids, filter_flight_to_time(dt))\n",
     "    \n",
@@ -305,7 +305,6 @@
     "    flight_ids = ROUTE_TO_FLIGHT[route_id]\n",
     "    for i, filtered_flight in enumerate((\n",
     "        filter_route_flights(flight_ids, current_dt),\n",
-    "        filter_route_flights(flight_ids, dt),\n",
     "        filter_flight_to_time(current_dt),\n",
     "    )):\n",
     "        for flight_id in filtered_flight:\n",
@@ -464,9 +463,9 @@
     "        \n",
     "                cancel = False\n",
     "                temps = []\n",
-    "                wait_until = ACCOUNT_WAIT_UNTIL[account_selected]\n",
+    "                wait_until = max(ACCOUNT_WAIT_UNTIL[account_selected], dt)\n",
     "                for route in routes:\n",
-    "                    temp = find_closest_flight(wait_until, route, n_tickets, dt)\n",
+    "                    temp = find_closest_flight(wait_until, route, n_tickets)\n",
     "                    temps.append(temp)\n",
     "                    if temp is None:\n",
     "                        cancel = True\n",
@@ -484,7 +483,7 @@
     "                    continue\n",
     "                print(account_selected, temps)\n",
     "                for route_seq, (flight_id, wait_until, seats) in enumerate(temps, start=1):\n",
-    "                    ACCOUNT_WAIT_UNTIL[account_selected] = wait_until\n",
+    "                    ACCOUNT_WAIT_UNTIL[account_selected] = max(wait_until, ACCOUNT_WAIT_UNTIL[account_selected])\n",
     "        \n",
     "                    flight_price = FLIGHT_PRICE[flight_id]\n",
     "                    if account_selected in ACCOUNT_MEMBERSHIP:\n",
