add write mode to file, fix sql, and change yield to return

--- a/tools/generate_data/generate_baggage.ipynb
+++ b/tools/generate_data/generate_baggage.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T10:58:03.569178Z",
+     "start_time": "2024-04-30T10:58:03.509788Z"
+    }
    },
-   "outputs": [],
    "source": [
     "from os import getenv\n",
     "from connect_db import connect_db\n",
@@ -18,13 +20,15 @@
     "    port=int(getenv(\"ORACLE_PORT\"))\n",
     ")\n",
     "cur = con.cursor()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T07:24:52.047128Z",
-     "start_time": "2024-04-30T07:24:52.040366Z"
+     "end_time": "2024-04-30T11:00:00.362094Z",
+     "start_time": "2024-04-30T11:00:00.357456Z"
     }
    },
    "cell_type": "code",
@@ -52,17 +56,17 @@
     "    value = lerp(base, target, adjust)\n",
     "    \n",
     "    # scale back value to the entire float range\n",
-    "    yield value * max_num "
+    "    return value * max_num "
    ],
    "id": "1de7094e6b5724a0",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T07:25:53.183579Z",
-     "start_time": "2024-04-30T07:25:53.160915Z"
+     "end_time": "2024-04-30T11:00:03.633832Z",
+     "start_time": "2024-04-30T11:00:03.623133Z"
     }
    },
    "cell_type": "code",
@@ -146,13 +150,16 @@
    ],
    "id": "f9dc2604a9d0778",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 46
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T11:00:04.007713Z",
+     "start_time": "2024-04-30T11:00:03.990842Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def calculate_membership_discount(membership_id: str) -> float:\n",
     "    match membership_id:\n",
@@ -168,24 +175,31 @@
     "stmt = \"SELECT ACCOUNT.ACCOUNT_ID, MEMBERSHIP_TYPE_ID FROM MEMBERSHIP JOIN ACCOUNT ON ACCOUNT.ACCOUNT_ID = MEMBERSHIP.ACCOUNT_ID\" \n",
     "ACCOUNT_MEMBERSHIP: dict[str, str] = {row[0]: row[1] for row in cur.execute(stmt)}"
    ],
-   "id": "23c62776fefc79e1"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "id": "23c62776fefc79e1",
    "outputs": [],
-   "execution_count": null,
-   "source": [
-    "stmt = \"SELECT ACCOUNT_ID FROM REFUND JOIN PAYMENT ON REFUND.PAYMENT_ID = PAYMENT.PAYMENT_ID\"\n",
-    "REFUNDED_ACCOUNT_ID = set(row[0] for row in cur.execute(stmt))"
-   ],
-   "id": "72418dd1689cd568"
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T07:42:27.975551Z",
-     "start_time": "2024-04-30T07:42:27.843431Z"
+     "end_time": "2024-04-30T11:00:04.367729Z",
+     "start_time": "2024-04-30T11:00:04.359444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "stmt = \"SELECT ACCOUNT_ID FROM REFUND JOIN PAYMENT ON REFUND.PAYMENT_ID = PAYMENT.PAYMENT_ID\"\n",
+    "REFUNDED_ACCOUNT_ID = set(row[0] for row in cur.execute(stmt))"
+   ],
+   "id": "72418dd1689cd568",
+   "outputs": [],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T11:00:04.757201Z",
+     "start_time": "2024-04-30T11:00:04.754210Z"
     }
    },
    "cell_type": "code",
@@ -197,24 +211,29 @@
    ],
    "id": "faef0330e4bcb020",
    "outputs": [],
-   "execution_count": 18
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "def get_payment_method() -> str:\n",
-    "    return random.choices((\"CRCD\", \"DBCD\", \"PYPL\", \"BANK\", \"CASH\"), k=1, weights=[0.3, 0.2, 0.1, 0.2, 0.2])[0]"
-   ],
-   "id": "7cd10d5464a426b6"
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T07:28:29.375408Z",
-     "start_time": "2024-04-30T07:28:29.367049Z"
+     "end_time": "2024-04-30T11:00:05.160771Z",
+     "start_time": "2024-04-30T11:00:05.157454Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_payment_method() -> str:\n",
+    "    return random.choices((\"CRCD\", \"DBCD\", \"PYPL\", \"BANK\", \"CASH\"), k=1, weights=[0.3, 0.2, 0.1, 0.2, 0.2])[0]"
+   ],
+   "id": "7cd10d5464a426b6",
+   "outputs": [],
+   "execution_count": 50
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T11:00:05.537771Z",
+     "start_time": "2024-04-30T11:00:05.532916Z"
     }
    },
    "cell_type": "code",
@@ -228,19 +247,22 @@
    ],
    "id": "1a9791ed74d5c83d",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 51
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T11:00:06.130134Z",
+     "start_time": "2024-04-30T11:00:05.923728Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from utils import paginate_insert_all\n",
     "from datetime import datetime\n",
     "\n",
-    "with open(\"3insertBaggage.sql\") as baggage_f, \\\n",
-    "     open(\"1insertPayment.sql\") as payment_f:\n",
+    "with open(\"3insertBaggage.sql\", \"w\") as baggage_f, \\\n",
+    "     open(\"1insertPayment.sql\", \"w\") as payment_f:\n",
     "        \n",
     "    BAGGAGE_SQL = \"    INTO BAGGAGE (BAGGAGE_TYPE_ID, PAYMENT_ID, FLIGHT_TICKET_ID, BAGGAGE_WEIGHT_IN_KG, PRICE, ADDITIONAL_INFO) VALUES ('{}', '{}', '{}', {.2f}, {.2f}, {})\"\n",
     "    def insert_baggage(flight_ticket_id: str, payment_id: str, baggage: Baggage):\n",
@@ -257,7 +279,7 @@
     "    insert_baggage = paginate_insert_all(f=insert_baggage, fp=baggage_f)\n",
     "    insert_payment = paginate_insert_all(f=insert_payment, fp=payment_f)\n",
     "    \n",
-    "    stmt = \"SELECT FLIGHT.FLIGHT_TICKET_ID, ACCOUNT_ID, DEPARTURE_DATETIME FROM FLIGHT_TICKET JOIN FLIGHT_SEQUENCE ON FLIGHT_TICKET.FLIGHT_TICKET_ID = FLIGHT_SEQUENCE.FLIGHT_TICKET_ID JOIN FLIGHT ON FLIGHT_SEQUENCE.FLIGHT_ID = FLIGHT.FLIGHT_ID\"\n",
+    "    stmt = \"SELECT FLIGHT_TICKET.FLIGHT_TICKET_ID, ACCOUNT_ID, DEPARTURE_DATETIME FROM FLIGHT_TICKET JOIN FLIGHT_SEQUENCE ON FLIGHT_TICKET.FLIGHT_TICKET_ID = FLIGHT_SEQUENCE.FLIGHT_TICKET_ID JOIN FLIGHT ON FLIGHT_SEQUENCE.FLIGHT_ID = FLIGHT.FLIGHT_ID\"\n",
     "    for row in cur.execute(stmt):\n",
     "        account_id = row[1]\n",
     "        if account_id in REFUNDED_ACCOUNT_ID:\n",
@@ -284,7 +306,23 @@
     "    baggage_f.write(\"SELECT 1 FROM DUAL;\\n\")\n",
     "    payment_f.write(\"SELECT 1 FROM DUAL;\\n\")"
    ],
-   "id": "c5b0c134164833a7"
+   "id": "c5b0c134164833a7",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[52], line 38\u001B[0m\n\u001B[1;32m     36\u001B[0m payment_amt: \u001B[38;5;28mfloat\u001B[39m \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m baggage \u001B[38;5;129;01min\u001B[39;00m get_random_baggages():\n\u001B[0;32m---> 38\u001B[0m     \u001B[43minsert_baggage\u001B[49m\u001B[43m(\u001B[49m\u001B[43mflight_ticket\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpayment_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbaggage\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     39\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m account_id \u001B[38;5;129;01min\u001B[39;00m ACCOUNT_MEMBERSHIP:\n\u001B[1;32m     40\u001B[0m         payment_amt \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m baggage\u001B[38;5;241m.\u001B[39mprice \u001B[38;5;241m*\u001B[39m calculate_membership_discount(ACCOUNT_MEMBERSHIP[account_id])\n",
+      "File \u001B[0;32m~/Code/SQL/Database-Design-Assignment/tools/generate_data/utils.py:15\u001B[0m, in \u001B[0;36mpaginate_insert_all.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     13\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSERT ALL\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 15\u001B[0m \u001B[43mf\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     16\u001B[0m wrapper\u001B[38;5;241m.\u001B[39mcount \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m increment\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m wrapper\u001B[38;5;241m.\u001B[39mcount \u001B[38;5;241m>\u001B[39m\u001B[38;5;241m=\u001B[39m every_n:\n",
+      "Cell \u001B[0;32mIn[52], line 13\u001B[0m, in \u001B[0;36minsert_baggage\u001B[0;34m(flight_ticket_id, payment_id, baggage)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     12\u001B[0m     additional_info \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNULL\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m---> 13\u001B[0m baggage_f\u001B[38;5;241m.\u001B[39mwrite(BAGGAGE_SQL\u001B[38;5;241m.\u001B[39mformat(\u001B[43mbaggage\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbaggage_type\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mname\u001B[49m, payment_id, flight_ticket_id, baggage\u001B[38;5;241m.\u001B[39mweight, baggage\u001B[38;5;241m.\u001B[39mprice, additional_info) \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'str' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "execution_count": 52
   },
   {
    "metadata": {},
